samples/_failures_safe/1761794248_781018_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4f6a0ae9.c: In function ‘main’:
./samples/SAFE/__tmp_4f6a0ae9.c:203:9: error: expected expression at end of input
  203 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_4f6a0ae9.c:203:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4f6a0ae9.c:203:9: error: expected declaration or statement at end of input
